package edu.austral.ingsis.clifford;

public interface FileSystemItem {
  String getName();

  String getPath();
}
